--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,11 @@
     <string name="navigation_home">Trang chủ</string>
     <string name="navigation_notification">Thông báo</string>
     <string name="navigation_account">Tài khoản</string>
+    <string name="cancel_app">Bạn có chắc chắn muốn thoát ứng dụng không?</string>
+    <string name="no">Không</string>
+    <string name="yes">Có</string>
     <string name="search_artist">Nhập tên ca sĩ</string>
     <string name="no_song">Không tìm thấy bài hát nào!</string>
+
 
 </resources>
