Update Validate password - check has specialChar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="message_login_success">Đăng nhập thành công!</string>
     <string name="message_confirm_email">Vui lòng xác thực email của bạn trước khi đăng nhập!</string>
     <string name="message_email_exist">Email đã được sử dụng.Vui lòng thử nhập email khác!</string>
-    <string name="message_wrong_email">Không thể gửi email xác thực. Vui lòng kiểm tra lại email!</string>
+    <string name="message_wrong_email">Email không đúng. Vui lòng kiểm tra lại!</string>
     <string name="message_register_success">Tạo tài khoản thành công. Email xác thực đã được gửi đến email của bạn\nVui lòng truy cập email để xác nhận!</string>
     <string name="message_getPassword_success">Đã gửi email thành công. Vui lòng truy cập email để đổi mật khẩu!</string>
     <string name="message_exception">Đã có lỗi xảy ra. Vui lòng thử lại!</string>
